--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 								<h1>HI, I AM <strong>XIN MENG.</strong></h1>
 								<h3>I am an engineer with a passion in robotics and design.</h3>
 							</div>
-							<a href="#" class="button button-border button-light button-circle" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">View my Works</a>
+							<a href="#" class="button button-border button-light button-circle button-align" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">View my Works</a>
+							<a href="images/Resume.pdf" target="_blank" class="button button-border button-light button-circle button-align">View my Resume</a> 
 						</div>
 					</div>
 
@@ -266,7 +267,7 @@
 					<div class="section nomargin">
 						<div class="container clearfix">
 							<div class="divcenter center" style="max-width: 900px;">
-								<h2 class="nobottommargin t300 ls1" style="color: white">I believe in working hard and playing hard. These are some of the activities that I like to pursue in my free time.</h2>
+								<h2 class="nobottommargin t300 ls1" style="color: white">I enjoy throwing myself into all sorts of activities. These are some of my favourites.</h2>
 							</div>
 						</div>
 					</div>
@@ -282,7 +283,7 @@
 												<div class="testi-content">
 													<img src="images/hobbies/CO.jpg" alt="Chinese Orchestra">
 													<div class="testi-meta">
-														<span>I have played the Chinese flute since I was 9, and I have performed in an orchestra for almost 8 years. Even though I no longer actively play in an orchestra, I still find it relaxing to pick up my flute and play it from time to time.</span>
+														<span>I have played the chinese flute since I was 9 and it has been a part of my life ever since. I went on to perform in orchestras for almost 8 years, and even though I no longer play in an orchestra, I still find it relaxing to pick up my flute and play it from time to time.</span>
 													</div>
 												</div>
 											</div>
@@ -342,9 +343,9 @@
 
 						<div class="col-md-6 bottommargin-sm">
 							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong> 
-								<br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. 
-								<br><br>In my free time, I play video games, Chinese flute, Chinese chess, badminton and table tennis.
-								<br><br><a href="images/Resume.pdf" target="_blank" class="more-link">View my resume <i class="icon-angle-right"></i></a>
+								<br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University, Illinois. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. It never ceases to amaze me when ideas in my head are brought to life with circuits and code.
+								<br><br>In my free time, I play video games, chinese flute, chinese chess, badminton and table tennis.
+								<!--<br><br><a href="images/Resume.pdf" target="_blank" class="more-link">View my resume <i class="icon-angle-right"></i></a>-->
 							</p>
 						</div>
 					</div>
