--- a/robobrawl.html
+++ b/robobrawl.html
@@ -121,7 +121,7 @@
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-users"></i>Team Members:</span> Jacob | John | Sisilia</li>
-										<li><span><i class="icon-link"></i>Gallery:</span> None</li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://github.com/yaoxinmeng/Robobrawl" target="_blank"> CAD Files</a></li>
 									</ul>
 								</div>
 							</div>
