--- a/industrialdesign.html
+++ b/industrialdesign.html
@@ -157,7 +157,7 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_full_text col_full nobottommargin">
-							<p>Architectural pieces have a sense of permanence and publicity that many other objects do not have. As such, it took me significantly longer to come up with a bus stop design that I was satisfied with. I wanted this piece to be more than just a shelter for commuters; I wanted it to be a public art piece that can be admired from any angle.</p>
+							<p>Architectural pieces have a sense of permanence and publicity that many other objects do not have. As such, it took me significantly longer to come up with a bus stop design that I was satisfied with. I wanted this piece to be more than just a shelter for commuters; I wanted it to be a public art piece that can be admired by all.</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
 
@@ -187,7 +187,7 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_full_text col_full nobottommargin">
-							<p>I wanted to design a backpack for the Northwestern Sailing Club that promotes school spirit. At the same time, I wanted people to associate the bag with the club without any explicit symbols or features.</p>
+							<p>I wanted to design a backpack for the Northwestern Sailing Club that promotes school spirit. At the same time, I wanted people to associate the bag with the club without any explicit symbols or graphics. Rather, I tried to play with the form to give it meaning.</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
 
@@ -217,7 +217,7 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_full_text col_full nobottommargin">
-							<p>I wanted to design a dining table set that could also be a conversational piece. The flowing wood pieces were inspired by Japanese tea sets, and the stiff steel screws by industrial furniture.</p>
+							<p>I wanted to design a dining table set that could also be a conversational piece. The flowing wood pieces were inspired by Japanese tea sets, and the stiff steel screws by industrial furniture. I hoped that the contrast between light and heavy, stiff and soft, wood and metal, can make meals around the table more exciting.</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
 
