Project text update

--- a/milkwatch.html
+++ b/milkwatch.html
@@ -139,12 +139,14 @@
 						<div class="col_half nobottommargin">
 							<p>
 								This project started out as a simple idea – to give people accurate information regarding freshness of milk without having to taste or smell it. However, it quickly led to hours of research regarding the microbial fauna of milk, its curdling process, and the corresponding change in physical properties. 
-								<br><br>We eventually determined that the pH and dielectric constant are two easily detectable physical properties that indicate milk freshness. To measure these properties, we incorporated a pH indicator and a self-made capacitor into a custom milk jug. I was placed in charge of designing and fabricating the jug; I used Solidworks to create a CAD model of the jug and 3D-printed it. 
+								<br><br>We eventually determined that the pH and dielectric constant are two easily detectable physical properties that indicate milk freshness. To measure these properties, we incorporated a pH indicator and a self-made capacitor into a custom milk jug. 
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>The Milkwatch jug was successful in detecting changes in microbial level and we realised that the fact that microbial levels affect the dielectric constant of the medium could have potential in non-chemical based detection of bacteria in water. 
+							<p>
+								The Milkwatch jug was successful in detecting changes in microbial level in milk. In addition, we realised that the fact that microbial levels affect the dielectric constant of the medium could have potential in non-chemical based detection of bacteria in water. It can provide almost instantaneous readings at the expense of some accuracy.
+								<br><br>For this project, I was given the sole responsibility of designing and fabricating the jug, as well as any rapid prototyping required. To do so, I learnt how to use Solidworks to create CAD models and operate 3D printers to bring the models to life. 
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
