--- a/nickel.html
+++ b/nickel.html
@@ -146,7 +146,7 @@
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release using the microcontroller-controlled electric valves. While Nickel no longer has control over her feeding times, this new design still introduces irregularity into her daily schedule. 
+							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release system using microcontroller-controlled electric valves. While Nickel no longer has direct control over her feeding times, this new design still introduces irregularity into her daily schedule. 
 							<br><br>From our testing at Shedd Aquarium, Nickel... 
 							</p>
 						</div>
