--- a/psa.html
+++ b/psa.html
@@ -95,7 +95,7 @@
 
 					<!-- Portfolio Single Gallery - DTD
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">A robotics competition organised by University of Illinois Urbana-Champaign</h2>
+					<h2 class="t300 bottommargin-sm">A mobile game-making competition held by PSA</h2>
 					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="false" data-animation="slide">
 							<div class="flexslider">
@@ -136,13 +136,8 @@
 
 						<!-- Portfolio Single - Description
 						============================================= -->
-						<div class="col_half nobottommargin">
-							<p>This was the first time that I programmed something in a practical sense. Through this project, I gained confidence in programming, and it also marked the start of many more programming projects to come. For this competition, our team eventually claimed a top 8 spot. 
-							</p>
-						</div>
-
-						<div class="col_half col_last nobottommargin">
-							<p>blah blah
+						<div class="col_full_text col_full nobottommargin">
+							<p>I was part of the two-man team in charge of writing the code. This therefore marked the first time that I programmed something in a practical sense. Through this project, I gained confidence in programming, and it also marked the start of many more programming projects to come. For this competition, our team eventually claimed a top 8 spot and a cash prize. 
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
