--- a/psa.html
+++ b/psa.html
@@ -121,7 +121,7 @@
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-users"></i>Team Members:</span> Dennis | Jiaheng | Seetoh | Seng Wee</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/" target="_blank"> Video Demonstrations</a></li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_daThOcUWpIpxon5CmGH_to" target="_blank"> Video Demonstrations</a></li>
 									</ul>
 								</div>
 							</div>
