--- a/industrialdesign.html
+++ b/industrialdesign.html
@@ -62,7 +62,7 @@
 
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="65">
 							<li><a href="index.html#wrapper"><div>Home</div></a></li>
-							<li><a href="index.html#section-works"><div>Works</div></a></li>
+							<li><a href="index.html#section-works"><div>Work</div></a></li>
 							<li><a href="index.html#section-hobbies"><div>Hobbies</div></a></li>
 							<li><a href="index.html#section-about"><div>About</div></a></li>
 							<li><a href="#" data-href="#footer"><div>Contact</div></a></li>
