--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
 					<div class="row notopmargin divcenter" style="max-width: 1000px;">
 
-						<div class="col-md-6 bottommargin-sm">
+						<div class="col-md-6 bottommargin-sm" style="padding-top: 12px;">
 							<img src="images/profile.jpg" alt="Profile">
 						</div>
 
@@ -345,7 +345,7 @@
 							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong> 
 								<br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University, Illinois. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. It never ceases to amaze me when ideas in my head are brought to life with circuits and code.
 								<br><br>In my free time, I play video games, chinese flute, chinese chess, badminton and table tennis.
-								<!--<br><br><a href="images/Resume.pdf" target="_blank" class="more-link">View my resume <i class="icon-angle-right"></i></a>-->
+								<br><br><a href="images/Resume.pdf" target="_blank" class="more-link">View my resume <i class="icon-angle-right"></i></a>
 							</p>
 						</div>
 					</div>
@@ -361,7 +361,7 @@
 
 			<div id="contacts">
 				<div class="container center clearfix">
-					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>   <em>&#183</em>   <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a>   <em>&#183</em>   <a href="https://www.instagram.com/xmxmyao/" target="_blank">INSTAGRAM</a></p>
+					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>   <em>&#183</em>   <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a></p>
 				</div>
 			</div>
 
