--- a/nickel.html
+++ b/nickel.html
@@ -303,7 +303,7 @@
 
 			<div id="contacts">
 				<div class="container center clearfix">
-					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>   <em>&#183</em>   <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a>   <em>&#183</em>   <a href="https://www.instagram.com/xmxmyao/" target="_blank">INSTAGRAM</a></p>
+					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>   <em>&#183</em>   <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a></p>
 				</div>
 			</div>
 
