--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
-
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
 
@@ -62,7 +61,7 @@
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="65">
 							<li><a href="#" data-href="#wrapper"><div>Home</div></a></li>
 							<li><a href="#" data-href="#section-works"><div>Work</div></a></li>
-							<li><a href="#" data-href="#section-hobbies"><div>Interests</div></a></li>
+							<li><a href="#" data-href="#section-hobbies"><div>Hobbies</div></a></li>
 							<li><a href="#" data-href="#section-about"><div>About</div></a></li>
 							<li><a href="#" data-href="#footer"><div>Contact</div></a></li>
 						</ul>
@@ -87,9 +86,9 @@
 						<div class="vertical-middle">
 							<div class="emphasis-title">
 								<h1>HI, I AM <strong>XIN MENG.</strong></h1>
-								<h3>I am an engineer with a passion in robotics and design.</h3>
+								<h3>I am an engineer with a passion for robotics and design.</h3>
 							</div>
-							<a href="#" class="button button-border button-light button-circle button-align" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">View my Works</a>
+							<a href="#" class="button button-border button-light button-circle button-align" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70" style="padding-right: 31px; padding-left: 31px;">View my Work</a>
 							<a href="images/Resume.pdf" target="_blank" class="button button-border button-light button-circle button-align">View my Resume</a> 
 						</div>
 					</div>
@@ -113,7 +112,7 @@
 					<div class="section nomargin">
 						<div class="container clearfix">
 							<div class="divcenter center" style="max-width: 900px;">
-								<h2 class="nobottommargin t300 ls1">I enjoy challenging myself and trying out new things. These are some of the works that I have built, designed or programmed in the past.</h2>
+								<h2 class="nobottommargin t300 ls1">I enjoy challenging myself and trying out new things. These are some of the projects that I have built, designed or programmed in the past.</h2>
 							</div>
 						</div>
 					</div>
