--- a/mechatronics.html
+++ b/mechatronics.html
@@ -122,7 +122,7 @@
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://youtu.be/odl52fTSrSQ" target="_blank"> Video Demonstration</a></li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://youtu.be/odl52fTSrSQ" target="_blank"> Video Demonstration</a> | <a href="https://github.com/yaoxinmeng/ME333" target="_blank"> Code</a></li>
 									</ul>
 								</div>
 							</div>
@@ -186,13 +186,13 @@
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Harmony | EAGLE | Python</li>
+									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Harmony | EAGLE | Onshape</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-calendar"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_eygGGwJLSBUCV-q6pgxNd4" target="_blank"> Video Demonstrations</a></li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_eygGGwJLSBUCV-q6pgxNd4" target="_blank"> Video Demonstrations</a> | <a href="https://github.com/yaoxinmeng/ME433" target="_blank"> Code</a></li>
 									</ul>
 								</div>
 							</div>
@@ -209,18 +209,18 @@
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>
-								MECH_ENG 433 was an extension of MECH_ENG 333. Through a series of assignements, we gained the skills required for the final assignment of MECH_ENG 433 – create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
+								MECH_ENG 433 was an extension of MECH_ENG 333. This class was a lot more hands-on and was much more unguided. I learnt to properly read data sheets and reference manuals on my own to figure out how to implement features that I want and potential causes of failures.
 								<br><br>For the final assignment, I had to apply all the skills learnt over the quarter: 
-								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and Python to program the client interface
-								<br><strong>&#183 Peripherals</strong> - 
-								<br><strong>&#183 Serial Communication</strong> - 
+								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller 
+								<br><strong>&#183 Rapid Prototyping</strong> - Using laser cutters and 3D printers to create quick mock-ups of CAD files
+								<br><strong>&#183 Serial Communication</strong> - Using I2C, SPI and USB to communicate with other microcontrollers or computers
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
 							<p>
-								<strong>&#183 Digital Signal Processing</strong> - Serial Communication between microcrontroller and computer
-								<br><br>More info after course actually ends after this quarter.
+								<strong>&#183 Digital Signal Processing</strong> - Using digital filters such as MAF, IIR and FIR to reduce error in raw data
+								<br><br>Through a series of assignments, we gained the skills required for the final assignment – to create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
