--- a/nickel.html
+++ b/nickel.html
@@ -147,7 +147,7 @@
 
 						<div class="col_half col_last nobottommargin">
 							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release system using microcontroller-controlled electric valves. While Nickel no longer has direct control over her feeding times, this new design still introduces irregularity into her daily schedule. 
-							<br><br>From our testing at Shedd Aquarium, Nickel... 
+							<br><br>From our testing at Shedd Aquarium, the dispensers worked underwater, but Nickel did not respond immediately to the dispensed greens. Based on client feedback, it might be due to Nickel's lack of experience with non-human sources of food. However, he was confident that Nickel would eventually associate the dispensers with food and become less dependent on the trainers' schedule.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
