--- a/nickel.html
+++ b/nickel.html
@@ -103,6 +103,7 @@
 									<div class="slide"><img src="images/projects/nickel/prototyping.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/nickel/idp_sketch.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/nickel/drawer.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/nickel/electronics.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
