--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
 						<div class="container clearfix">
 
-							<div class="fslider testimonial testimonial-full nobgcolor noborder noshadow nopadding" data-arrows="false">
+							<div class="fslider testimonial testimonial-full nobgcolor noborder noshadow nopadding" data-arrows="true">
 									<div class="flexslider">
 										<div class="slider-wrap">
 											<div class="slide">
