--- a/mechatronics.html
+++ b/mechatronics.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Mechatronics</title>
+	<title>Yao Xin Meng | Mechatronics Coursework</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -170,8 +170,8 @@
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/mechatronics/lcd.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/mechatronics/final.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -211,8 +211,8 @@
 							<p>
 								MECH_ENG 433 was an extension of MECH_ENG 333. This class was a lot more hands-on and was much more unguided. I learnt to properly read data sheets and reference manuals on my own to figure out how to implement features that I want and potential causes of failures.
 								<br><br>For the final assignment, I had to apply all the skills learnt over the quarter: 
-								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller 
-								<br><strong>&#183 Rapid Prototyping</strong> - Using laser cutters and 3D printers to create quick mock-ups of CAD files
+								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller in Harmony IDE
+								<br><strong>&#183 Rapid Prototyping</strong> - Using laser cutters and 3D printers to create quick mock-ups from CAD
 								<br><strong>&#183 Serial Communication</strong> - Using I2C, SPI and USB to communicate with other microcontrollers or computers
 							</p>
 						</div>
@@ -220,7 +220,7 @@
 						<div class="col_half col_last nobottommargin">
 							<p>
 								<strong>&#183 Digital Signal Processing</strong> - Using digital filters such as MAF, IIR and FIR to reduce error in raw data
-								<br><br>Through a series of assignments, we gained the skills required for the final assignment – to create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
+								<br><br>Through a series of assignments, we gained the skills required for the final assignment – to create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track. In addition to building the electronics, we were also expected to design our entire car. This includes motor mounts, wheels and the chassis. 
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
