--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									<div class="team-image">
 										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
 										<div class="team-overlay">
-											<a href="mechatronics.html" class="social-icon" title="Mechatronics">
+											<a href="mechatronics.html" class="social-icon" title="Mechatronics Coursework">
 												<h3>A series of projects that were done as part of the Northwestern University Mechatronics courses.
 												</h3>
 											</a>
