--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							<div class="col-md-6 bottommargin">
 								<div class="team">
 									<div class="team-image">
-										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+										<img src="images/projects/mechatronics.jpg" alt="Mechatronics Coursework">
 										<div class="team-overlay">
 											<a href="mechatronics.html" class="social-icon" title="Mechatronics Coursework">
 												<h3>A series of projects that were done as part of the Northwestern University Mechatronics courses.
@@ -133,7 +133,7 @@
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Mechatronics</h4></div>
+										<div class="team-title"><h4>Mechatronics Coursework</h4></div>
 									</div>
 								</div>
 							</div>
