--- a/mechatronics.html
+++ b/mechatronics.html
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Mechatronics</h1>
+				<h1>Mechatronics Coursework</h1>
 			</div>
 
 		</section><!-- #page-title end -->
