--- a/nickel.html
+++ b/nickel.html
@@ -104,7 +104,7 @@
 									<div class="slide"><img src="images/projects/nickel/drawer1.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/nickel/drawer2.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/nickel/electronics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/nickel/team.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/nickel/team.jpeg" alt=""></div>
 								</div>
 							</div>
 						</div>
