--- a/nickel.html
+++ b/nickel.html
@@ -141,15 +141,15 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
-							<p>In collaboration with Shedd Aquarium, we wanted to encourage Nickel, the resident sea turtle, to have a healthy lifestyle. Due to her regular feeding schedule, Nickel was inactive for the majority of the day and was active only during feeding times.
-							<br><br>To tackle this problem, our initial design was an array of feeders that would activate when Nickel pressed a button. We hoped that this interaction would give Nickel a sense of control over her feeding times and therefore motivate her to be active outside of regular feeding times.
-							<br><br>To ensure that our feeder remained robust underwater, we powered it pneumatically. The pneumatics were controlled by a microcontroller at the surface, which gave us more control over the entire system. During the prototyping phase, we encountered unforeseen technical challenges with the pneumatics system that significantly delayed our plans. 
+							<p>In collaboration with Shedd Aquarium, we wanted to encourage Nickel, the resident sea turtle, to have a healthier lifestyle. Currently, due to her regular feeding schedule, Nickel has learnt to be active only during feeding times.
+							<br><br>In order to motivate Nickel to exercise more throughout the day, we originally envisioned deploying an array of feeders that would activate when Nickel pressed a button. We hoped that this interaction would give Nickel a sense of control over her food source and therefore motivate her to be active outside of regular feeding times.
+							<br><br>To ensure that our feeder remained robust underwater, we powered it pneumatically. The pneumatics were controlled by a microcontroller at the surface, which gave us more control over the entire system. During the prototyping phase, we encountered unforeseen technical challenges with the pneumatics system that significantly delayed our plans.
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
 							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release system using microcontroller-controlled electric valves. While Nickel no longer has direct control over her feeding times, this new design still introduces irregularity into her daily schedule. 
-							<br><br>From our testing at Shedd Aquarium, the dispensers worked underwater, but Nickel did not respond immediately to the dispensed greens. Based on client feedback, it might be due to Nickel's lack of experience with non-human sources of food. However, he was confident that Nickel would eventually associate the dispensers with food and become less dependent on the trainers' schedule.
+							<br><br>From our testing at Shedd Aquarium, the dispensers worked underwater, but Nickel did not respond immediately to the dispensed greens. Based on client feedback, it might be due to Nickel's lack of experience with food sources from inanimate objects. However, he was confident that Nickel would eventually associate the dispensers with food and become less dependent on the trainers' schedule.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
