--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 					<div class="row notopmargin divcenter" style="max-width: 1000px;">
 
 						<div class="col-md-6 bottommargin-sm" style="padding-top: 12px;">
-							<img src="images/profile.jpg" alt="Profile">
+							<img src="images/profile/profile.jpg" alt="Profile">
 						</div>
 
 						<div class="col-md-6 bottommargin-sm">
