--- a/index.html
+++ b/index.html
@@ -257,6 +257,23 @@
 								</div>
 							</div>
 
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/tensorflow.png" alt="fyp">
+										<div class="team-overlay">
+											<a href=NULL class="social-icon" title="Final Year Project">
+												<h3>Works in Progress.
+												</h3>
+											</a>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Final Year Project</h4></div>
+									</div>
+								</div>
+							</div>
+
 						</div>
 
 				</div>
