--- a/index.html
+++ b/index.html
@@ -124,6 +124,23 @@
 							<div class="col-md-6 bottommargin">
 								<div class="team">
 									<div class="team-image">
+										<img src="images/projects/pytorch.jpg" alt="fyp">
+										<div class="team-overlay">
+											<a href="fyp.html" class="social-icon" title="Final Year Project">
+												<h3>A project to reconstruct the 3D model of room architecture from photographs.
+												</h3>
+											</a>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Final Year Project</h4></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
 										<img src="images/projects/mechatronics.jpg" alt="Mechatronics Coursework">
 										<div class="team-overlay">
 											<a href="mechatronics.html" class="social-icon" title="Mechatronics Coursework">
@@ -256,24 +273,7 @@
 									</div>
 								</div>
 							</div>
-
-							<div class="col-md-6 bottommargin">
-								<div class="team">
-									<div class="team-image">
-										<img src="images/projects/tensorflow.png" alt="fyp">
-										<div class="team-overlay">
-											<a href=NULL class="social-icon" title="Final Year Project">
-												<h3>Works in Progress.
-												</h3>
-											</a>
-										</div>
-									</div>
-									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Final Year Project</h4></div>
-									</div>
-								</div>
-							</div>
-
+							
 						</div>
 
 				</div>
