--- a/industrialdesign.html
+++ b/industrialdesign.html
@@ -231,6 +231,24 @@
 					<h4 class="related-works">Other Works:</h4>
 
 					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-xl="3">
+						
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/pytorch.jpg" alt="fyp">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="fyp.html" class="social-icon" title="Final Year Project">
+											<h4>A project to reconstruct the 3D model of room architecture from photographs.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Mechatronics</h3>
+								</div>
+							</div>
+						</div>
 
 						<div class="oc-item">
 							<div class="iportfolio">
