--- a/milkwatch.html
+++ b/milkwatch.html
@@ -167,6 +167,24 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
+										<img src="images/projects/pytorch.jpg" alt="fyp">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="fyp.html" class="social-icon" title="Final Year Project">
+											<h4>A project to reconstruct the 3D model of room architecture from photographs.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Mechatronics</h3>
+								</div>
+							</div>
+						</div>
+						
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
 										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
 									</a>
 									<div class="portfolio-overlay">
