--- a/fyp.html
+++ b/fyp.html
@@ -95,12 +95,13 @@
 
 					<!-- Portfolio Single Gallery - DTD
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">A robotics competition organised by University of Illinois Urbana-Champaign</h2>
+					<h2 class="t300 bottommargin-sm">A project to reconstruct the 3D model of room architecture from photographs.</h2>
 					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="false" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/robobrawl/final.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/fyp/pytorch.jpg" alt=""></div>
+									<!-- <div class="slide"><img src="images/projects/fyp/pytorch.jpg" alt=""></div> -->
 								</div>
 							</div>
 						</div>
@@ -114,14 +115,14 @@
 							<div class="card-body">
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> Mar 2018</li>
-										<li><span><i class="icon-lightbulb"></i>Skills:</span> Solidworks | 3D printing</li>
+										<li><span><i class="icon-calendar-check"></i>Completed on:</span> Apr 2020</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span> Python | PyTorch | OpenCV</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-users"></i>Team Members:</span> Jacob | John | Sisilia</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://github.com/yaoxinmeng/Robobrawl" target="_blank"> CAD Files</a></li>
+										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://github.com/yaoxinmeng/FYP" target="_blank"> Code</a></li>
 									</ul>
 								</div>
 							</div>
@@ -138,13 +139,16 @@
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>
-								Our team wanted to create a robot that would dominate. To do so, we decided to build a lifting type robot. However, this type of robot had never been built before by the Northwestern Robotics Club and we had to start from scratch. 
-								<br><br>We designed the bodywork and lever mechanism of the robot, and I was placed in charge of creating the CAD files. Over the course of the quarter, we reiterated the design based on weight, material and fabrication constraints. 
+								My Final Year Project aims to reconstruct the 3D model of room architecture from photographic images, specifically focusing on extracting the relevant structural edges in photographs. This has always been 
+								the greatest challenge in the process because traditional deterministic approaches to the problem, such as the Canny Edge Detector, have been unable to isolate structural edges from non-structural edges, expecially in images where much noise is present. As such, machine learning is proposed as a possible alternative for detecting structural edges in photographic images.
+								<br><br>In recent years, there have been huge improvements in image processing capabilities. In particular, Fully Convolutional Networks (FCN) have gained immense popularity in image segmentation projects. By classifying each pixel as belonging to a structural edge or not, a FCN can generate a mask that predicts the location, size and shape of structural edges. For this project, I adapted the U-Net model and implemented it using PyTorch.
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>However, we eventually pulled out of the competition as the motor controllers that we ordered failed to arrive on time. Though it was disappointing, I was still glad to be given the opportunity to learn and try out something different. 
+							<p>
+								Since no similar projects have previously been done, it was difficult to find relevant labelled datasets. Eventually, I had to manually label images from the LSUN dataset. In order to speed up the labelling process, I created a custom labelling tool that was designed particularly for edge-labelling purposes. After augmenting the dataset to get around 20,000 labelled images, the model is trained over 50 epochs.
+								<br><br>With some post-processing to the output mask and applying Hough Transform, the equation of each line that represents an edge can be determined. Using this result, a regression can be conducted to create a skeleton of the 3D structure. Through this project, I have learnt the theories behind machine learning, particularly in the field of computer vision. 
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -247,6 +251,24 @@
 								</div>
 								<div class="portfolio-desc">
 									<h3>Industrial Design</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
+											<h4>My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Robobrawl</h3>
 								</div>
 							</div>
 						</div>
