--- a/fyp.html
+++ b/fyp.html
@@ -97,11 +97,13 @@
 					============================================= -->
 					<h2 class="t300 bottommargin-sm">A project to reconstruct the 3D model of room architecture from photographs.</h2>
 					<div class="col_full portfolio-single-image">
-						<div class="fslider" data-arrows="false" data-animation="slide">
+						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/fyp/pytorch.jpg" alt=""></div>
-									<!-- <div class="slide"><img src="images/projects/fyp/pytorch.jpg" alt=""></div> -->
+									<div class="slide"><img src="images/projects/fyp/final.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/fyp/model.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/fyp/label.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/fyp/layers.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
